--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,6 +18,7 @@ ja:
         prefecture_id: 発送元の地域
         delivery_time_id: 発送までの日数
         price: 価格
+        user: ユーザー情報
   activemodel:
     models:
       order_address:
